--- a/docs/02-app/01-building-your-application/01-routing/09-intercepting-routes.mdx
+++ b/docs/02-app/01-building-your-application/01-routing/09-intercepting-routes.mdx
@@ -10,7 +10,7 @@ related:
 
 Intercepting routes allows you to load a route from another part of your application within the current layout. This routing paradigm can be useful when you want to display the content of a route without the user switching to a different context.
 
-For example, when clicking on a photo in a feed, you can display as a modal, overlaying the feed. In this case, Next.js intercepts the `/photo/123` route, masks the URL, and overlays it over `/feed`.
+For example, when clicking on a photo in a feed, you can display the photo in a modal, overlaying the feed. In this case, Next.js intercepts the `/photo/123` route, masks the URL, and overlays it over `/feed`.
 
 <Image
   alt="Intercepting routes soft navigation"
