fix typo for `--dev`

--- a/docs/02-app/01-building-your-application/07-configuring/02-eslint.mdx
+++ b/docs/02-app/01-building-your-application/07-configuring/02-eslint.mdx
@@ -217,7 +217,7 @@ yarn add --dev eslint-config-prettier
 
 pnpm add --dev eslint-config-prettier
 
-bun add --development eslint-config-prettier
+bun add --dev eslint-config-prettier
 ```
 
 Then, add `prettier` to your existing ESLint config:
@@ -279,7 +279,7 @@ yarn add --dev @next/eslint-plugin-next
 
 pnpm add --dev @next/eslint-plugin-next
 
-bun add --development @next/eslint-plugin-next
+bun add --dev @next/eslint-plugin-next
 ```
 
 This eliminates the risk of collisions or errors that can occur due to importing the same plugin or parser across multiple configurations.
