--- a/docs/02-app/01-building-your-application/03-rendering/02-client-side-rendering.mdx
+++ b/docs/02-app/01-building-your-application/03-rendering/02-client-side-rendering.mdx
@@ -70,7 +70,25 @@ export default function Counter() {
 >
 > However, `"use client"` doesn't need to be defined in every component that needs to be rendered on the client. Once you define the boundary, all components and modules imported into it, or in other words, the branch in the tree is considered part of the client bundle.
 
->
+## How are Client Components Rendered?
+
+How Client Components are rendered depends on whether the user is visiting your application for the first time or if it's a subsequent navigation.
+
+### Initial Visit
+
+To optimize the initial page load, Next.js will use React's APIs to render an HTML preview on the server for Client and Server Components. This means, when the user first visits your application, they will see the content of the page immediately, without having to wait for the client to download and parse the Client Component JavaScript bundle.
+
+On the client, React does two things:
+
+1. Reconciles the Client and Server Component trees.
+2. Updates the DOM.
+3. Use the Client Components JavaScript bundle to [hydrate](https://react.dev/reference/react-dom/client/hydrateRoot) Client Components - this makes the UI interactive.
+
+{/* Diagram */}
+
+> **What is hydration?**
+
+> Hydration is process of attaching event listeners to the DOM, to make the static HTML interactive.
 
 ### Initial Request
 
