--- a/docs/02-app/01-building-your-application/03-rendering/02-client-side-rendering.mdx
+++ b/docs/02-app/01-building-your-application/03-rendering/02-client-side-rendering.mdx
@@ -10,7 +10,7 @@ This page will go through how Client Components work, when you might use them, a
 
 ## React Client Components
 
-React Server Components allow us to create interactive UI that is rendered on the client. There are a couple of benefits to doing the rendering work on the client, including:
+React Client Components allow us to create interactive UI that is rendered on the client. There are a couple of benefits to doing the rendering work on the client, including:
 
 - **Interactivity**: Client Components can use state, effects, and event listeners, meaning they can provide immediate feedback to the user and update the UI.
 - **Browser APIs**: Client Components have access to browser APIs, like [geolocation](https://developer.mozilla.org/en-US/docs/Web/API/Geolocation_API) or [localStorage](https://developer.mozilla.org/en-US/docs/Web/API/Window/localStorage).
