Docs: fix pnpm command for saving dev deps (#53937)

--- a/docs/02-app/01-building-your-application/07-configuring/02-eslint.mdx
+++ b/docs/02-app/01-building-your-application/07-configuring/02-eslint.mdx
@@ -215,7 +215,7 @@ npm install --save-dev eslint-config-prettier
 
 yarn add --dev eslint-config-prettier
 
-pnpm add --dev eslint-config-prettier
+pnpm add --save-dev eslint-config-prettier
 
 bun add --dev eslint-config-prettier
 ```
@@ -277,7 +277,7 @@ npm install --save-dev @next/eslint-plugin-next
 
 yarn add --dev @next/eslint-plugin-next
 
-pnpm add --dev @next/eslint-plugin-next
+pnpm add --save-dev @next/eslint-plugin-next
 
 bun add --dev @next/eslint-plugin-next
 ```
