Rewrite composition patterns

--- a/docs/02-app/01-building-your-application/03-rendering/02-client-side-rendering.mdx
+++ b/docs/02-app/01-building-your-application/03-rendering/02-client-side-rendering.mdx
@@ -98,4 +98,4 @@ On subsequent navigations, Client Components are rendered entirely on the client
 
 Sometimes, after you've declared the ``"use client"` directive, you may want to switch back to the server environment. For example, you may want to reduce the client bundle size, fetch data on the server, or use an API that is only available on the server.
 
-In cases like this, you can interleave Client and Server Components in the same branch, see the [Composition Patterns](/docs/app/building-your-application/rendering#composition-patterns) documentation for implementation details.
+In cases like this, you can interleave Client and Server Components in the same route, see the [Composition Patterns](/docs/app/building-your-application/rendering#composition-patterns) documentation for implementation details.
