--- a/docs/02-app/01-building-your-application/01-routing/11-middleware.mdx
+++ b/docs/02-app/01-building-your-application/01-routing/11-middleware.mdx
@@ -183,7 +183,7 @@ export function middleware(request: NextRequest) {
 ```js filename="middleware.js" switcher
 import { NextResponse } from 'next/server'
 
-export function middleware(request: NextRequest) {
+export function middleware(request) {
   // Assume a "Cookie:nextjs=fast" header to be present on the incoming request
   // Getting cookies from the request using the `RequestCookies` API
   let cookie = request.cookies.get('nextjs')
